--- a/2-creteil.html
+++ b/2-creteil.html
@@ -1,8 +1,8 @@
 
 <section class="heading center">
-		<h3> GFRP Prototype</h3>
+		<h3>Créteil Cathedral</h3>
 		<hr>
-		<h4> design and construction of a 350m<sup>2</sup> elastic gridshell</h4>
+		<h4> design and construction of a 350m<sup>2</sup> GFRP elastic gridshell</h4>
 		<aside class="notes">
 			Un mot rapide sur le contexte.
 		</aside>
@@ -53,6 +53,15 @@
 </section>
 
 
+<section class="center" data-transition="fade-in fade-out">
+	<object id="" width="60%" type="image/svg+xml" data="img/anim/form-grid-structure.svg"></object>
+	<aside class="notes">
+		On conserve l'interaction à résoudre. Mais on veut accélérer le cycle de travail.
+		Pourquoi, pour avoir une capacité de décision sur la forme et sur la géométrie du maillage.
+		On pose une grille sur une forme. On travail à forme fixée. et on peut choisir l'orientation du maillage.
+	</aside>
+</section>
+
 <section class="">
 	<h5>Curvature Analysis</h5>
 	<img src="./img/curvature_analysis.jpg" width="80%"/>
@@ -80,20 +89,40 @@
 	<img class="fragment current-visible" src="./img/compass_3.png" width="70%"> -->
 </section>
 
+<section class="">
+	<h5>Grids</h5>
+	<img src="./img/compass_grids.png" width="60%"/>
+</section>
+
+<section class="">
+	<h5>Grids</h5>
+	<img src="./img/rdf.png" width="120%"/>
+</section>
+
 <section class="center">
 	<h5>Design Criteria</h5>
 	<div class="formula display">   E\frac{r}{R_{spline}} \leqslant \frac{\sigma_{k,flex}}{\gamma_{lt}}</div>
 </section>
 
-<section class="center">
-	<h5>Grids</h5>
-	<img src="./img/compass_grids.png" width="60%"/>
+<section class="">
+	<h5>Formfinding</h5>
+	<img src="./img/douthe.png" width="50%"/>
+	<p style="text-align:center"><cite>Wakefield 1980 | Adriaenssens, Barnes, Williams 2001 | Douthe 2007</cite></p>	
 </section>
 
-<section class="center">
-		<h5>Formfinding</h5>
-		<img src="./img/compass_grids.png" width="60%"/>
-	</section>
+<section class="">
+	<h5>Structural Analysis</h5>
+	<img src="./img/gsa.jpg" width="100%"/>
+</section>
+
+<section class="center negative">
+	<ul>
+		<li>More DOF (full kinematics) > torsion, boundary condition, connection</li>
+		<li>Avoid GSA (later / shorter cycles)</li>
+		<li>Anisotrop cross-section</li>
+		<li>keep agility</li>
+	</ul>
+</section>
 
 <!-- 
 <section>
