--- a/2-creteil.html
+++ b/2-creteil.html
@@ -25,6 +25,7 @@
 </section>
 
 <section class="center" data-transition="fade-in fade-out">
+	<!-- <img data-src="img/anim/form-grid-structure.svg" width="60%"> -->
 	<object id="" width="60%" type="image/svg+xml" data="img/anim/form-grid-structure.svg"></object>
 	<aside class="notes">
 		On conserve l'interaction à résoudre. Mais on veut accélérer le cycle de travail.
@@ -75,9 +76,9 @@
 <section class="">
 	<h5>Compass Method</h5>
 	<!-- <h7 class="">Compass Methode</h7> -->
-	<img src="" width="60%"/>
+	<img src="./img/compass_1.png" width="60%"/>
 	<div>
-		<span class="fragment imgsrc" data-src="./img/compass_1.png" data-fragment-index="0"></span>
+		<span class="" data-src="./img/compass_1.png" data-fragment-index="0"></span>
 		<span class="fragment imgsrc" data-src="./img/compass_2.png" data-fragment-index="1"></span>
 		<span class="fragment imgsrc" data-src="./img/compass_3.png" data-fragment-index="2"></span>
 		<span class="fragment imgsrc" data-src="./img/compass_4.png" data-fragment-index="3"></span>
@@ -91,12 +92,11 @@
 
 <section class="">
 	<h5>Grids</h5>
-	<img src="./img/compass_grids.png" width="60%"/>
-</section>
-
-<section class="">
-	<h5>Grids</h5>
-	<img src="./img/rdf.png" width="120%"/>
+	<img src="./img/compass_grids.svg" width="130%"/>
+	<div>
+		<span class="" data-src="./img/compass_grids.svg" data-fragment-index="0"></span>
+		<span class="fragment imgsrc" data-src="./img/rdf.png" data-fragment-index="1"></span>
+	</div>
 </section>
 
 <section class="center">
