--- a/2-creteil.html
+++ b/2-creteil.html
@@ -76,9 +76,9 @@
 <section class="">
 	<h5>Compass Method</h5>
 	<!-- <h7 class="">Compass Methode</h7> -->
-	<img src="./img/compass_1.png" width="60%"/>
+	<img class="imgfragment" src="./img/compass_1.png" width="60%"/>
 	<div>
-		<span class="" data-src="./img/compass_1.png" data-fragment-index="0"></span>
+		<span class="imgsrc" data-src="./img/compass_1.png" data-fragment-index="0"></span>
 		<span class="fragment imgsrc" data-src="./img/compass_2.png" data-fragment-index="1"></span>
 		<span class="fragment imgsrc" data-src="./img/compass_3.png" data-fragment-index="2"></span>
 		<span class="fragment imgsrc" data-src="./img/compass_4.png" data-fragment-index="3"></span>
@@ -92,7 +92,7 @@
 
 <section class="">
 	<h5>Grids</h5>
-	<img src="./img/compass_grids.svg" width="130%"/>
+	<img class="imgfragment" src="./img/compass_grids.svg" width="130%"/>
 	<div>
 		<span class="" data-src="./img/compass_grids.svg" data-fragment-index="0"></span>
 		<span class="fragment imgsrc" data-src="./img/rdf.png" data-fragment-index="1"></span>
