--- a/4-model_2.html
+++ b/4-model_2.html
@@ -25,9 +25,9 @@
 	
 <section class="">
 	<h5 class="">Cosserat Rod</h5>
-	<img src="./img/eq/cosserat_1.svg" width="50%"/>
+	<img class="imgfragment" src="./img/eq/cosserat_1.svg" width="50%"/>
 	<div>
-		<span class="" data-src="./img/eq/cosserat_1.svg" data-fragment-index="0"></span>
+		<span class="imgsrc" data-src="./img/eq/cosserat_1.svg" data-fragment-index="0"></span>
 		<span class="fragment imgsrc" data-src="./img/eq/cosserat_2.svg" data-fragment-index="1"></span>
 	</div>
 </section>
