--- a/5-numeric.html
+++ b/5-numeric.html
@@ -320,5 +320,6 @@
 
 <section class="">
 	<h5 class="">DR : Position</h5>
-	<img data-src="./img/eq/out.gif" width="60%">
+	<object id="" width="60%" type="image/svg+xml" data="img/eq/pendulum_anim.svg"></object>	
+	<!-- <img data-src="./img/eq/pendulum_anim.svg" width="60%"> -->
 </section>
