Reprise v0.1 pour synthétiser
Focus sur les problématiques, les obstacles, les apports

--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
 		<div class="reveal">
 		<div class="slides">
 
-		<section>
 
+		<!-- FRONMATTER -->
+		<section>
 			<section class="cover center" data-state="no-title-footer">
 				<h1>Modeling of bending-torsion couplings<br>in active-bending structures</br></h1>
 				<hr>
@@ -47,58 +48,62 @@
 				<br>
 				<p><small>Focus : discrete beam models for nonlinear formfinding and structural analysis</small></p>
 				<aside class="notes">
-					Un mot rapide.
-					Ce travail de thèse s'inscrit dans un projet de recherhce de plus longue haleine qui a démarré au début des années 2000.
-					J'ai moi même rejoins ce projet en 2010 celà fait presque 8 ans
+					
 				</aside>
 			</section>
 
-			<section class="">
-				<h5> Lab context</h5>
+			<section class="center">
+				<h5>Context</h5>
+				<table class="imgtable" width="100%">
+				<tr>
+					<td><img data-src="./img/logo/navier.svg" ></td>
+					<td><img data-src="./img/logo/tess.svg" ></td>
+				</tr>
+				<!-- <tr>
+					<td><small>research</small><br></td>
+					<td><small>engineering</small><br></td>
+				</tr> -->
+				</table>
+				<p style="text-align:center"><cite>(<sup>*</sup>) Douthe 2007, Bouhaya 2010, Kotelnikova 2012, Tayeb 2015, du Peloux 2017</cite>	</p>				
+				<aside class="notes">
+					<ul>
+						<li>A mi-chemin entre recherche et ingénierie</li>
+						<li>Démarrée en 2010 = 8 ans</li>
+						<li>S'intègre dans un projet débuté en 2002</li>
+						<li>5 thèses</li>
+					</ul>
+				</aside>
+			</section>
+
+			<section class="plan">
+				<h5>Plan</h5>
 				<ul>
-					<li>research project initiated in 2002</li>
-					<li>Architected Materials and Structures</li>
-					<li>5 PhD <sup>*</sup></li>
-					<li>several prototypes (gfrp, timber, concrete)</li>
+					<li>Concept : what is an elastic gridshell</li>
+					<li> Design Process : issues and challenges</li>
+					<hr>
+					<li>Beam model : variational approach</li>
+					<li>Beam model : equilibrium approach</li>
+					<li>Beam model : discrete element</li>
+					<hr>
+					<li>Implementation & Test case</li>
 				</ul>
-				<p style="text-align:center"><cite>(<sup>*</sup>) Douthe 2007, Bouhaya 2010, Kotelnikova 2012, Tayeb 2015, du Peloux 2017</cite>	</p>
 				<aside class="notes">
-					Un mot rapide.
-					Ce travail de thèse s'inscrit dans un projet de recherhce de plus longue haleine qui a démarré au début des années 2000.
-					J'ai moi même rejoins ce projet en 2010 celà fait presque 8 ans
 				</aside>
 			</section>
 
-			<section class="">
-				<h5>Personal context</h5>
-				<ul>
-					<li>since 2010 (8 years)</li>
-					<li>research - engineering</li>
-					<li>work on major prototypes</li>
-				</ul>		
-				<aside class="notes">
-					Un mot rapide.
-					Ce travail de thèse s'inscrit dans un projet de recherhce de plus longue haleine qui a démarré au début des années 2000.
-					J'ai moi même rejoins ce projet en 2010 celà fait presque 8 ans
-				</aside>
-			</section>
-
-			<!-- <section data-background-image="./img/proto_b.jpg" data-background-size="cover">
-				<h2>This background image will be sized to 100px and repeated</h2>
-			</section> -->
 
 		</section>
 		
-
+		<!-- MAINMATTER -->
 		<section data-external="1-intro.html"> </section>
 		<section data-external="2-creteil.html"> </section>
-		<section data-external="3-model_1.html"> </section>
-		<section data-external="4-model_2.html"> </section>
-		<section data-external="5-numeric.html"> </section>
-		<section data-external="6-marsupilami.html"> </section>
-		<!-- <section data-external="3-context.html"> </section>
-		<section data-external="1-context.html"> </section> -->
-			
+
+		<!-- APPENDIX -->
+		<section data-external="A1-model_1.html"> </section>
+		<section data-external="A2-model_2.html"> </section>
+		<section data-external="A3-numeric.html"> </section>
+		<section data-external="A4-marsupilami.html"> </section>
+
 		</div>
 		</div>
 
