--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 				</aside>
 			</section>
 
-			<section class="plan">
+			<section class="plan center">
 				<h5>Plan</h5>
 				<ul>
 					<li>Concept : what is an elastic gridshell</li>
@@ -97,12 +97,14 @@
 		<!-- MAINMATTER -->
 		<section data-external="1-intro.html"> </section>
 		<section data-external="2-creteil.html"> </section>
+		<section data-external="3-model_1.html"> </section>
 
 		<!-- APPENDIX -->
-		<section data-external="A1-model_1.html"> </section>
-		<section data-external="A2-model_2.html"> </section>
-		<section data-external="A3-numeric.html"> </section>
-		<section data-external="A4-marsupilami.html"> </section>
+		<section data-external="A1-creteil.html"> </section>
+		<section data-external="A2-model_1.html"> </section>
+		<section data-external="A3-model_2.html"> </section>
+		<section data-external="A4-numeric.html"> </section>
+		<section data-external="A5-marsupilami.html"> </section>
 
 		</div>
 		</div>
