--- a/3-model_1.html
+++ b/3-model_1.html
@@ -119,7 +119,7 @@
 		Connaissant le vecteur de Darboux au début de la courbe, en intégrant cette équation, je suis capable de le propager le long de la courbe, à tout abscisse curviligne.
 	</aside>
 </section>
-<section class="ellipsis">
+<section class="">
 	<h5 class="">Adapted Moving Frame</h5>
 	<ul>
 		<li>Adapted to the centerline</li>
