--- a/1-intro.html
+++ b/1-intro.html
@@ -28,13 +28,13 @@
 	<hr>
 	On voit ici, la préfabrication de la structure faite en tubes composites pultrudés à base de fibre de verre
 	<hr>
-	L'assemblage de la grille au sol sur une surface d'environ 700m2
+	Et l'assemblage de la grille au sol sur une surface d'environ 700m2
 	<hr>
 	On devinne la grande légerté et la grande souplesse de cet objet très poreux qui pèse moins de 3kg au m2.
 	<hr>
 	L'ouvrage est soulevé pour être progressivement mis en forme. Au vu de la déformation générée, on imagine sans difficulté qu'on ne peut se contenter de mener de simple calculs linéaires pour dimensionner ces structures.
 	<hr>
-	La structure est ensuite ancrée au sol et l'on obtient l'état de forme définitif de la structure.
+	La structure est ensuite ancrée au sol et l'on obtient l'état de forme définitif.
 	<hr>
 	L'ajout d'une troisième direction de tube joue une rôle majeur dans la raideur finale de la structure.
 	<hr>
@@ -84,7 +84,7 @@
 		A l'issu de ces quelques exemples, je propose de comprendre le concept de gridshell élastique comme la combinaison indissociable d'un matériau flexible, d'une typologie structurelle, et d'un processus de construction.
 		<hr>
 		Le terme Grid-Shell fera référence à la typologie structurelle
-		Tandis que le terme élastique fera référence à la flexitié du matériau employé et au procédé de mise en forme.
+		Tandis que le terme élastique fera référence aussi bien à la flexitié du matériau employé qu'au procédé de mise en forme qiu en tire parti.
 		<hr>
 		Revenons de manière plus précise sur cette définition.
 	</aside>
@@ -151,70 +151,59 @@
 </section>
 <section class="center" data-background-image="./img/creteil_3b.jpg" data-background-size="cover" data-state="autohide">
 	<aside class="notes">
-	Plus le caclul de forme est maîrtisé et plus on peut aller loin dans l'étude de la mise en forme. Par un plan d'élinguage bien choisi on peut d'embléer donner une forme la plus proche possible de la forme cible et simplifier cette étape délicate.
+	Plus le caclul de forme est maîrtisé et plus il est possible d'aller loin dans l'étude de la mise en forme. Par un plan d'élinguage bien choisi on peut d'emblé donner une forme la plus proche possible de la forme cible et simplifier cette étape délicate.
 	<hr>
-	A la vue de cette photo on comprend aussi la nécessité d'être capable de simuler les étapes transitoires et pas seulement de dimensionner la structure dans son état final. Soulever une grille de cette taille ne s'improvise pas. Les risques de casse pour la strucrture sont élevés tout comme les risques d'accident pour les compagnons qui travaillent autour.
-	
-	<ul>
-		<li>On voit bien qu'on va passer par des configurations très déformées</li>
-		<li>Qu'il faut être capable d'anticiper et de prévoir</li>
-		<li>Que la façon dont on préforme la grille en la soulevant va influencer la suite du montage</li>
-		<li>Qu'on peut déjà la préformer</li>
-		<li>Calcul non linéaire complexe. Il y a tous les états transitoires</li>
-		<li>La réaction dynalique de la grille</li>
-		<li>devoir être capable, dans un modèle d'appliquer des efforts concentrés comme l'action des élingues</li>
-		<li>Pour élaborer des cinématiques de levage, une certaine interactivité du modèle / synchronization des grues</li>
-	</ul>
+	A la vue de cette photo on comprend aussi la nécessité d'être capable de simuler les étapes transitoires et pas seulement de dimensionner la structure dans son état final. 
+	<hr>
+	Soulever une grille de cette taille ne s'improvise pas. Les risques de casse pour la structure sont élevés tout comme les risques d'accident pour les compagnons qui travaillent autour.
+	<hr>
+	On voit également que le niveau de déformation de la structure est très important, et que donc les calculs seront à traité en non linéaire, ce qui est là encore un point essentiel de cette thèse.
 	</aside>
 </section>
 <section class="center" data-background-image="./img/creteil_4.jpg" data-background-size="cover" data-state="autohide">
 	<h7 class="">Anchoring</h7>
 	<aside class="notes">
-	<ul>
-		<li>Une fois la structure ammenée en position</li>
-		<li>On fixe les barres une à une </li>
-	</ul>
+	Une fois la grille positionnée au dessus de ses appuis les tubes sont fixés un à un aux ancrages préalablement scéllés dans la dalle.
+	<hr>
+	L'hyperstaticité de la structure rend cette étape compliquée et difficile à prévoir. Celà nécessiterait un grand nombre de calculs pour définir en amont la séquence de montage et l'ordre optimal dans lequel fixer les tubes.
 	</aside>
 </section>
 <section class="center" data-background-image="./img/creteil_4b.jpg" data-background-size="cover" data-state="autohide">
 	<aside class="notes">
-	<ul>
-		<li>Rotule reproduite par 3 axes de rotation (cardan)</li>
-		<li>On voit un nouveau détail complexe, à la fois par ça cinématique et par l'interaction composite/acier</li>
-		<li>Les charges deviennent plus concentrées au niveau des appuis</li>
-	</ul>
+	Au niveau des appuis les efforts se concentrent et il faut pouvoir transférer toutes les charges aux fondations.
+	On retrouve dans le détail d'appuis le dispositif de transfert composite-acier utilisé pour le manchon.
+	<hr>
+	La cinématique de l'ancrage doit pouvoir accomoder toutes les directions de l'espace en restant le plus proche possible de la rotule.
+	<hr>
+	Ici, 3 axes de rotation combinés permettent d'orienter le détail dans toutes les directions de l'espace et également d'assurer une certaine reprise de jeu par des réglages.
 	</aside>
 </section>
 <section class="center" data-background-image="./img/creteil_5b.jpg" data-background-size="cover" data-state="autohide">
 	<h7 class="">Bracing > Shell</h7>
 	<aside class="notes">
-	<ul>
-		<li>Seconde étape clef après la mise en forme</li>
-		<li>Le contreventment. Moins spectaculaire pour le spectateur non initiée.</li>
-		<li>Réseau d'arche => Coque</li>
-		<li>On bloque le degré de liberté en cisaillement qui nous a permis de faire la déformation</li>
-	</ul>
-	<ul>
-		<li>On gagne enormément en raideur x20 et en résistance au flambement</li>
-		<li>Cependant c'est une étape longue et fastidieuse. Couteuse même dans le projet, comme l'analyse économique a permis de le quantifier.</li>
-		<li>D'où booby et la triangulation par cable de monpellier qui est embarquée dans la grille au sol</li>
-	</ul>
+	Puis la grille primaire est contreventé, ici par l'ajout d'une troisième direction de tubes. Moins spectaculaire que l'étape précédente pour un néophite, c'est pourtant à ce moment précis que l'on donne à la structure sa pleine performance mécanique. Et que quelque par la magie s'opère.
+	<hr>
+	On a profité jusqu'ici du degré de liberté en cisaillement de la grille pour la déformer spatialement. Et on a obtenu une structure courbe qui fonctionne plutôt comme un réseau d'arches précontraintes en flexion. Donc très peu raide au vu de la section des poutres qui la constituent.
+	<hr>
+	En bloquant ce degré de liberté on active le comportement membranaire de la structure et elle se comporte alors comme une coque. Le différentiel de raideur calculé est de l'ordre de 15.
+	<hr>
+	Cependant, cette étape requière un travail minutieux et délicat car effectué en hauteur. Il contraste avec l'efficacité des autres étapes et pénalise le coût global de l'ouvrage comme l'a montré le bilan économique dréssé dans ma thèse.
+	<hr>
+	L'optimisation de cette étape reste toujours ouverte et j'ai montré en introduction de ma présentation deux pistes que j'ai eu l'occasion d'explorer : le système à cable et la peau en béton.
 	</aside>
 </section>
 <section class="center" data-background-image="./img/creteil_6.jpg" data-background-size="cover" data-state="autohide">
 	<h7 class="">Roofing</h7>
 	<aside class="notes">
-	<ul>
-		<li>Ensuite vient l'étape de couverture</li>
-		<li>Ajout d'une membrane PVC précontraint</li>
-		<li>Comme un vêtement, patronné sur mesure par un spécialiste</li>
-		<li>Pas sur la base d'un relevé géométrique mais sur les résultats de simulation</li>
-		<li>L'enjeu de précision dans le calcul : pas de pli</li>
-	</ul>
+	Pour finir la structure est couverte, ici par une toile en PVC précontraint.
+	<hr> 
+	Cette toile n'est finalement rien d'autre qu'un grand vêtement, patroné sur mesure, avec lequel on vient habiller le gridshell.
+	<hr>
+	La toile est façonée sur la base d'une surface 3D NURBS reconstruite à partir du resultat du calcul de recherche de forme. Il n'y a pas de prise d'information sur la structure réèlle.
+	<hr>
+	En principe, c'est l'étape de vérité quant à la précision des études. Si la toile fait des plis, c'est que la forme obtenue ne correspond pas précisément à la forme calculée. On ne peut pas tricher.
 	</aside>
 </section>
-
-
 
 <!-- 
 =============================================================================================== 
@@ -222,8 +211,9 @@
 =============================================================================================== 
 -->
 <section class="plan center">
-	<strong>Pros & Cons</strong>
+	<strong>Summary</strong>
 	<aside class="notes">
+		Résumons les avantages de ces structures ainsi que les difficultées de conception que nous venons d'identifier
 	</aside>
 </section>
 
@@ -232,17 +222,18 @@
 	<br><br>
 	<strong>Curved shape from flat and regular grid</strong>
 	<aside class="notes">
-		Miser sur la raideur géométrique, liée à la forme de la structure, et à sa courbure.
-		Et même, on va rechercher la souplesse du matériau pour pouvoir accéder à des formes suffisament courbes.
-
-		Un intéret constructif évident. Construire courbe ça coute cher et ça prend du temps. Ca requiert en général beaucoup de coffrage, de moules, d'étaiement dont on s'affranchit ici tout ou
+	Les deux éléments clefs du concept sont les suivants.
+	<hr>
+	Premièrement on titre partie de la souplesse du matériau pour générer de la forme, c'est à dire de la courbure, afin de développer de la raideur géométrique.
+	<hr>
+	Deuxièmement on accède à une manière particuliérement efficace sur le plan constructif de créer une enveloppe courbe à partir d'une résille complètement standardisée et initialement plane. On s'épargne ainsi la fabrication d'objets courbes, de moules, de coffrages, de dispositifs d'étaiement qui sont en général complexes et couteux à réaliser.
 	</aside>
 </section>
 <section class="center" data-background-image="./img/pekin.jpg" data-background-size="cover">
 	<!-- <h5 style="color:white">Application</h5> -->
 	<h7 class="">Beijing Opera 2007</h7>
 	<aside class="notes">
-		Un potentiel pour l'architecture moderne, où l'expression formelle est une composante importante.
+	Elles ont semble-t-il un certain potentiel pour l'architecture contemporaine pour laquelle l'expression formelle est une composante prédominante.
 	</aside>
 </section>
 <section class="center negative">
@@ -252,12 +243,11 @@
 	<br><br>
 	<strong>Detailing & Envelope</strong>
 	<aside class="notes">
-		dimension coneptuelle
-		dimension technologique
-		La géométrie finale du projet est le résultat d'un calcul d'équilibre complexe, fortement non linéaire.
-		Avec des phénomène de couplage flexion torsion dans des matériaux qui n'aiment guerent ce type de sollicitation
-		Des conditions d'appuis et de connexion complex
-		Et aussi une certaine exigence pour de l'interactivité.
+	On a vu cependant que cette efficacité n'est possible qu'au prix d'une complexité certaine.
+	<hr>
+	Cette complexité se manifeste principalement dans l'interaction forme-résille-structure qui demande de maitriser des calculs non linéaires complexes pour pouvoir prédire la forme d'équilibre de la structure.
+	<hr>
+	Que par ailleurs se posent un certain nombre de questions technologiques liées aux détails du système constructif (connexions, ancrages, manchons) et à la matérialité de l'enveloppe.
 	</aside>
 </section>
 
@@ -266,24 +256,16 @@
 	HISTORY
 =============================================================================================== 
 -->
-<section class="plan center">
+<!-- <section class="plan center">
 	<strong>History</strong>
 	<aside class="notes">
-	<ul>
-		<li>je n'ai pas le temps de rentrer dans les détails</li>
-		<li>je vais rappler l'essentiel</li>
-	</ul>
+		
 	</aside>
-</section>
+</section> -->
 <section class="center" data-background-image="./img/mannheim_1.jpg" data-background-size="cover" data-state="autohide" data-autoslide="">
 	<h7 class="">Mannheim 1975</h7>
 	<aside class="notes">
-	<ul>
-		<li>invention par Frei Otto, ingénieur et architecte Allemand dans les années 60</li>
-		<li>rendues célèbres par cette réalisation, la multihalle de Mannheim en 75. 60m de portée / 8000m2 cou</li>
-		<li>60m de portée / 8000m2 couvert</li>
-		<li>revisiter cet héritage : méthodes numériques + composites</li>
-	</ul>
+	Enfin, je ne pourrais pas terminer de bonne fois cette partie introductive sans mentionner l'architecte et ingénieur allemand Frei Otto, qui a inventé et étudié ces structures dans les années 60, et à qui ont doit la multihalle de Mannheim, un gridshell double nape en bois d'environ 8000m2 construit en 1975.
 	</aside>
 </section>
 <!-- <section class="">
@@ -296,9 +278,9 @@
 		</ul>
 </section> -->
 
-<section data-state="">
+<!-- <section data-state="">
 	<object id="container" width="80%" type="image/svg+xml" data="img/projects.svg"></object>
-</section>
+</section> -->
 <!-- <section class="center" data-background-image="./img/hannover_1.jpg" data-background-size="cover" data-state="autohide">
 	<h7 class="">Hannover 2000</h7>
 </section>
