--- a/2-creteil.html
+++ b/2-creteil.html
@@ -10,6 +10,9 @@
 		<hr>
 		<li>Implementation & Test case</li>
 	</ul>
+	<aside class="notes">
+		Je vais maintenant présenter de manière très condensée la méthode de conception que j'ai employée pour la cathédrale éphémère de créteil.
+	</aside>
 </section>
 
 <!-- 
@@ -21,25 +24,17 @@
 	<!-- <img data-src="img/anim/form-grid-structure.svg" width="60%"> -->
 	<object id="" width="60%" type="image/svg+xml" data="img/anim/form-grid-structure.svg"></object>
 	<aside class="notes">
-		L'enjeu essentiel pour le processus de conception, c'est cette interaction forme maillage structure.
-		On conserve l'interaction à résoudre. Mais on veut accélérer le cycle de travail.
-		Pourquoi, pour avoir une capacité de décision sur la forme et sur la géométrie du maillage.
-		On pose une grille sur une forme. On travail à forme fixée. et on peut choisir l'orientation du maillage.
+	Je l'ai souligné précédement, l'enjeu central du processus de conception d'un gridshell élastique est de maitriser l'interaction forme-maillage-structure. L'objectif est de parvenir à définir une structure qui réponde à la fois aux enjeux architecturaux et structurels du projet.
 	</aside>
 </section>
 <section class="center" data-background-image="./img/hanging.jpg" data-background-size="cover" data-state="autohide">
 	<h7 class="">Mannheim 1975</h7>
 	<aside class="notes">
-		La méthode de Frei Otto. Une grille + des CL = une forme.
-		Puis il joue sur les CL.
-		C'est brillant. Mais pas vraiment reproductible comme expérience.
-		Et celà explique en partie l'absence de projet de 1975 et 2000.
-		Nous on cherche à faire ça numériquement pour plusieurs raisons.
-		<ul>
-			<li>Obtenir de l'information méca plus riche</li>
-			<li>Accélerer les itérations</li>
-			<li>Gagner en liberté d'exploration de l'espace de design</li>
-		</ul>
+	En son temps, Frei Otto avait développé au fil de ses recherches un processus de conception complet basé sur la manipulation de maquettes physiques et la prise de mesure par photogrammétrie.
+	<hr>
+	Très à la pointe dans les années 60 ces techniques sont aujourd'hui tombées en désuétudes et restent limitées au regard des possibilitées apportées par les outils numériques modernes, tant sur le plan de la géométrie que sur celui de la mécanique.
+	<hr>
+	Par ailleurs la méthode de Frei Otto était basée sur la recherche de forme à partir d'un fillet pesant, ce qui contraignait notablement l'espace de design accessible en terme de liberté formelle et qui par ailleurs ne permettait pas de prendre en compte la vrai raideur en flexion de la grille à construire.
 	</aside>
 </section>
 <section class="center positive">
@@ -49,9 +44,11 @@
 		<strong>shorter cycles</strong>
 	</p>
 	<aside class="notes">
-		On veut plus de contôle sur la forme. Donc on ne va pas partir de la grille + des CL pour aller vers la forme relaxée.
-		On va intuiter, à partir d'une forme dessinée par un architect, une grille et un jeu de CL qui vont nous conduire vers une forme relaxée suffisament proche de l'intention de départ.
-		On veut accélérer le cycle
+		A créteil, la méthode que nous avons mise en oeuvre vise à remettre la forme au centre du processus de conception pour redonner plus de place à l'expression de l'intention architecturale.
+		<hr>
+		Au lieu de raisonner sur une grille, nous raisonnons à partir d'une forme 3D sur laquel nous recherchons des maillages admissibles par la méthode du compas.
+		<hr>
+		On a également cherché à reduire autant que possible la duré d'un cycle d'analyse pour se donner les moyens d'explorer plus largement l'espace de design. 
 	</aside>
 </section>
 
@@ -63,8 +60,7 @@
 <section class="plan center">
 	<strong>Design Process</strong>
 	<aside class="notes">
-		bien comprendre que ces structures elles sont soumises à une forte précontrainte de flexion, du fait de la mise en forme.
-		Trouver une grille et un jeu de conditions limites qui donne une forme robuste mécaniquement et intéressante sur le plan architecturale.
+		Je vais maintenant décrire en trois étapes la méthode de conception telle que je l'ai mise en oeuvre.
 	</aside>
 </section>
 
@@ -78,42 +74,48 @@
 	<hr>
 	<br>
 	<div class="formula display">   E\frac{r}{R} \leqslant \frac{\sigma_{k,flex}}{\gamma_{lt}}</div>
+	<aside class="notes">
+		Lorsqu'on en vient à dimensionner ces structures, on cherche avant tout à vérifier qu'elles peuvent supporter les contraintes induites par l'étape de mise en forme et qui sont principalement des contraintes de flexion. 
+		<hr>
+		J'ai donc utilisé le critère suivant pour évaluer la pertinance des objets géométriques manipulés jusqu'à l'élaboration du modèle de calcul final. 
+		<hr>
+		Ce critère somme toute asssez simple, a permis de circonscire drastiquement les options à calculer jusqu'au bout et donc de réduire sensiblement les cycles d'analayses.
+		<hr>
+		A gauche on reconnait l'expresion de la contrainte de flexion dans un profil de section circulaire de rayon r et de courbure R. Contrainte qui doit être inférieure à la contrainte caractérisdtique diminuée d'un coefficient de sécurité de l'ordre de 3 pour ce type de chargement dans les composites GFRP.
+	</aside>
 </section>
-	
-
 <section class="">
 	<h5>Curvature Analysis</h5>
 	<img src="./img/curvature_analysis.jpg" width="80%"/>
 	<aside class="notes">
-		On part d'une intention architecturale.
-		On évalue la possibilité de plaquer une grille sur cette surface, à partir de sa courbure principale minimale.
-		Qui donne une idée approchée de ce que pourrait être la courbure la plus forte d'une poutre forcée sur la surface.
-		On itère jusqu'à identifier des formes candidates.
+		La première étape de la méthode consiste à évaluer la possibilité de plaquer une grille sur la surface de l'architecte.
+		<hr>
+		Cette évaluation est menée à l'aune du critère précédement établi en prenant comme courbure la courbure principale maximale de la surface.
 	</aside>
 </section>
-
-
 <section class="">
 	<h5>Compass Method</h5>
 	<!-- <h7 class="">Compass Methode</h7> -->
 	<img class="imgfragment" src="./img/compass_5.png" width="60%"/>
+	<p><cite>[Otto IL10]</cite></p>
 	<aside class="notes">
-		Pour les formes les plus compatibles, on génère des maillages de tchébychev par la méthode du compas.
+		Pour les formes compatibles, on génère des maillages de tchébychev par la méthode du compas à partir de deux directrices seccantes tracées sur la surface. Une méthode décrite par Frei Otto lui même.
 	</aside>
 </section>
 
 <section class="">
 	<h5>Gridfinding</h5>
 	<img class="imgfragment" src="./img/compass_grids.svg" width="130%"/>
+	<p><cite>[Masson 2017]</cite></p>
 	<div>
 		<span class="imgsrc" data-src="./img/compass_grids.svg" data-fragment-index="0"></span>
 		<span class="fragment imgsrc" data-src="./img/rdf.png" data-fragment-index="1"></span>
 	</div>
 	<aside class="notes">
-		On reconstruit la grille dans le plan. On fait le gridfinding.
-		Et on évalue le potentiel des grilles en évaluant la courbure des splines.
-		Evaluation peu couteuses qui donne déjà des indications précieuses sur le faisabilité de la grille.
-		On itère jusqu'à identifier des maillages candidats.
+		On reconstruit alors la grille dans le plan horizontal.
+		Des jeux de directrices différents donnent lui à des grilles en plan de contour différents.
+		<hr>
+		Les grilles sont évalués à l'aune du critère précédement établi en prenant comme courbure la courbure des courbes du maillage tracées sur la surface.
 	</aside>
 </section>
 
@@ -123,9 +125,9 @@
 	<img src="./img/douthe.png" width="50%"/>
 	<p style="text-align:center"><cite>Wakefield 1980 | Adriaenssens, Barnes, Williams 2001 | Douthe 2007</cite></p>	
 	<aside class="notes">
-		Enfin , on calcul la forme d'équilibre à partir de la géométrie de la grille au repos et des positions des appuis.
-		Ce calcul donne accès au vrai niveau de précontrainte de flexion dans les barres.
-		Pour ce projet j'ai mis au point un code de relaxation dynamique basé sur l'élément à 3 noeuds et 3DOF d'adraiensen.
+		Enfin, pour les grilles compatibles, on effectue la recherche de forme de la structure. C'est à dire qu'on cherche la forme d'équilibre mécanique à partir de la géométrie de la grille au repos et des positions des appuis. C'est seulement ce calcul qui donne accès au vrai niveau de contrainte dans les barres  et à la géométrie finale de la structure.
+		<hr>
+		Pour ce projet j'ai mis au point un code de relaxation dynamique basé sur l'élément à 3 noeuds et 3DOF d'Adriaenssens et le modèle de connexion de Douthe.
 	</aside>
 </section>
 
@@ -134,10 +136,9 @@
 	<h7 class="tag">GSA</h7>
 	<img src="./img/gsa.jpg" width="100%"/>
 	<aside class="notes">
-		Enfin , si tous les critères précédents ont été passés avec succès, on réalise la vérification complète de la structure sous cas de charges normatifs dans un logiciel du commerce, ici gsa.
-		Nécessaire pour dialoguer avec les instances de controle.
-		Pour ce faire, j'ai écrit une passerelle me permetant de construire le problème dans GSA à partir du résultat de calcul de mon code de relaxation dynamique.
-		Ces modèles ne pourraient être construit manuellement contenu de leur complexité géométrique. En particulier les cas de charges.
+		Enfin , si et seulement si tous les critères précédents ont été passés avec succès, on se lance dans la vérification complète de la structure sous cas de charges normatifs et si possible dans un logiciel du commerce pour dialoguer avec les instances de controle.
+		<hr>
+		Ici on voit le modèle reconstruit dans GSA et dans lequel on a réinjecté les données sur la précontrainte de flexion.
 	</aside>
 </section>
 
@@ -149,6 +150,7 @@
 <section class="plan center">
 	<strong>Results & Limitations</strong>
 	<aside class="notes">
+		Regard critique sur cette méthode
 	</aside>
 </section>
 
@@ -156,10 +158,17 @@
 	<h5>Results</h5>
 	<ul>
 		<li>Agility</li>
-		<li>Pre-analysis with curvature >faster ccyles</li>
+		<li>Pre-analysis with curvature >faster cyles</li>
 		<li>Gridfinding > architectural freedom</li>
 		<li>Formfinding > real-time mechanical insights</li>
 	</ul>
+	<aside class="notes">
+		La méthode mise en oeuvre nous a donné une certaine agilité et permis d'explorer différentes formes et différents maillages.
+		<hr>
+		Pour celà le critère de courbure a été d'une grande utilité.
+		<hr>
+		Le code de relaxation dynamique a aussi permi de bénéficier de retour relativement rapide sur les modèles calculés.
+	</aside>
 </section>
 
 <section class="center negative">
@@ -167,12 +176,27 @@
 	<ul>
 		<li>Beam model is only 3-DOFs</li>
 		<li>No torsion</li>
+		<li>No transfert of moment</li>
 		<li>No anisotropic cross-section</li>
 		<li>No complex connection kinematics</li>
-		<li>No transfert of moment</li>
 		<li>No concentrated applied loads</li>
 		<li>Slowdown : bridge with GSA</li>
 	</ul>
+	<aside class="notes">
+	Cependant, le modèle de poutre employé reste relativement limité à cause de sa description cinématique trop pauvre.
+	<hr>
+	En particulier, il ne permet pas 
+	<ul>
+		<li>de prendre en compte la torsion dans les poutres</li>
+		<li>de transférer du moment aux noeuds</li>
+		<li> de modéliser des poutres de section anisotrope</li>
+		<li>de modéliser des connexions avec des cinématiques complexes proches des conditions réélles</li>
+		<li>d'appliquer des efforts extérieurs concentrés ou distribués</li>
+		<li>la boucle par GSA est comlexe et ralentie le cycle de design</li>
+	</ul>
+	<hr>
+	Ce sont ces limitations mises en lumière par l'expérience acquise sur les projets précédement présezntés, qui nous ont conduit à vouloir développer un élément de poutre plus riche qui nous permettre de modéliser plus fidèlement le comportement mécanique des gridshells élastiques, sans sacrifier pour autant au niveau d'agilité déjà atteint.
+</aside>
 </section>
 
 <!-- 
