--- a/2-creteil.html
+++ b/2-creteil.html
@@ -163,11 +163,11 @@
 		<li>Formfinding > real-time mechanical insights</li>
 	</ul>
 	<aside class="notes">
-		La méthode mise en oeuvre nous a donné une certaine agilité et permis d'explorer différentes formes et différents maillages.
+		La méthode de coneption mise en oeuvre nous a donné une certaine agilité et permis d'explorer l'espace de design an termes de formes et de maillages.
 		<hr>
 		Pour celà le critère de courbure a été d'une grande utilité.
 		<hr>
-		Le code de relaxation dynamique a aussi permi de bénéficier de retour relativement rapide sur les modèles calculés.
+		Le code de relaxation dynamique a aussi permi de bénéficier de retours relativement rapides sur les modèles calculés.
 	</aside>
 </section>
 
@@ -195,7 +195,7 @@
 		<li>la boucle par GSA est comlexe et ralentie le cycle de design</li>
 	</ul>
 	<hr>
-	Ce sont ces limitations mises en lumière par l'expérience acquise sur les projets précédement présezntés, qui nous ont conduit à vouloir développer un élément de poutre plus riche qui nous permettre de modéliser plus fidèlement le comportement mécanique des gridshells élastiques, sans sacrifier pour autant au niveau d'agilité déjà atteint.
+	Ce sont ces limitations mises en lumière par l'expérience acquise sur les projets précédement présentés, qui nous ont conduit à vouloir développer un élément de poutre plus riche qui nous permettre de modéliser plus fidèlement le comportement mécanique des gridshells élastiques, sans sacrifier pour autant au niveau d'agilité déjà atteint.
 </aside>
 </section>
 
