Energy fini -> Kirchhoff

--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
 					// Zoom in and out with Alt+click
 					{ src: 'plugin/zoom-js/zoom.js', async: true },
 					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+					// { src: 'plugin/toc-progress/toc-progress.js', async: true, callback: function() { toc_progress.initialize(); toc_progress.create(); } },
 				]
 			});
 		</script>
